# linkedin-agent

./: .gitignore  README.md  pyproject.toml
linkedin_agent/: indexer.py  main.py  prompts.py  retriever.py
