[project]
name = "linkedin-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.2",
    "openai>=1.95.1",
    "pymupdf>=1.26.3",
    "ruff>=0.12.3",
]

[dependency-groups]
dev = []
